# ai-dev-tools-zoomcamp

./: .gitignore  render.yaml
.github/workflows/: ci-cd.yml
homework1/: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  env.example  manage.py  pyproject.toml
homework1/infra/: docker-compose.yml
homework1/infra/init-db/: 01-init.sql  README.md
homework1/templates/: base.html
homework1/templates/todos/: home.html  todo_confirm_delete.html  todo_form.html
homework1/todo_project/: asgi.py  settings.py  urls.py  wsgi.py
homework1/todos/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
homework1/todos/migrations/: 0001_initial.py
homework2/: .dockerignore  .gitignore  Makefile  README.md  homework.md  openapi.yaml
homework2/backend/: .dockerignore  .gitignore  Dockerfile  code_executor.py  database.py  db_service.py  main.py  migrations.py  pyproject.toml  pytest.ini
homework2/backend/tests/integration/: conftest.py  test_api.py  test_websocket.py
homework2/backend/tests/unit/: test_code_executor.py  test_db_service.py
homework2/frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
homework2/infra/: Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml
homework3/: .gitignore  AGENTS.md  INTEGRATION.md  Makefile  README.md  main.py  pyproject.toml  search.py  test.py  test_minsearch.py
project/: .dockerignore  .gitignore  Makefile  README.md  openapi.yaml
project/backend/: .dockerignore  .env.example  .gitignore  Dockerfile  (+2 more)
(+61 files in other folders)
