[project]
name = "django-todo"
version = "0.1.0"
description = "Django TODO Application"
requires-python = ">=3.10"
dependencies = [
    "django>=5.0.0,<6.0.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["todo_project", "todos"]
